--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/4f8499aff7.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,6 +26,6 @@
   <body>
     <h1>Roboto</h1>
 
-    <h2>Wet Vegetable Spring Rolls</h2>
+    <h2>Wet Vegetable Spring Rolls <i class="fa-brands fa-instagram"></i></h2>
   </body>
 </html>
