--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Roboto</h1>
-
-    <h2>Wet Vegetable Spring Rolls <i class="fa-brands fa-instagram"></i></h2>
+    <div class="overlay">
+      <img src="/images/overlay.png" />
+      <div class="overlay-text">
+        <h1>Recipe Collection</h1>
+        <p>
+          Find a variety of inspiring recipes that are easy, delicious, and
+          healthy here
+        </p>
+      </div>
+    </div>
   </body>
 </html>
