--- a/index.html
+++ b/index.html
@@ -21,11 +21,56 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/styles.css" />
-    <title>Document</title>
+    <title>Recipe Collection</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light navbar-margin">
+      <div class="container-fluid">
+        <a href="/index.html"
+          ><img
+            src="images/She Codes.png"
+            class="navbar-brand logo"
+            href="/index.html"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link home-text-color"
+                aria-current="page"
+                href="/index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar-text-color" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar-text-color" href="#">Recipe</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navbar-text-color" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="overlay">
-      <img src="/images/overlay.png" />
+      <img src="/images/overlay.png" class="ovarlay-img" />
       <div class="overlay-text">
         <h1>Recipe Collection</h1>
         <p>
@@ -34,5 +79,93 @@
         </p>
       </div>
     </div>
+    <div class="main">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <img
+              src="/images/1Wet Vegetable Spring Rolls.png"
+              class="img-fluid"
+              alt=""
+            />
+            <h2>Wet Vegetable Spring Rolls</h2>
+          </div>
+          <div class="col-sm-6">
+            <img
+              src="/images/2Wet Vegetable Spring Rolls.png"
+              class="img-fluid"
+              alt=""
+            />
+            <h2>Wet Vegetable Spring Rolls</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <img
+              src="/images/3Wet Vegetable Spring Rolls.png"
+              class="img-fluid"
+              alt=""
+            />
+            <h2>Wet Vegetable Spring Rolls</h2>
+          </div>
+          <div class="col-sm-6">
+            <img
+              src="/images/4Wet Vegetable Spring Rolls.png"
+              class="img-fluid"
+              alt=""
+            />
+            <h2>Wet Vegetable Spring Rolls</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <img
+              src="/images/5Wet Vegetable Spring Rolls.png"
+              class="img-fluid"
+              alt=""
+            />
+            <h2>Wet Vegetable Spring Rolls</h2>
+          </div>
+          <div class="col-sm-6">
+            <img
+              src="/images/6Wet Vegetable Spring Rolls.png"
+              class="img-fluid"
+              alt=""
+            />
+            <h2>Wet Vegetable Spring Rolls</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <img
+              src="/images/7Wet Vegetable Spring Rolls.png"
+              class="img-fluid"
+              alt=""
+            />
+            <h2>Wet Vegetable Spring Rolls</h2>
+          </div>
+          <div class="col-sm-6">
+            <img
+              src="/images/8Wet Vegetable Spring Rolls.png"
+              class="img-fluid"
+              alt=""
+            />
+            <h2>Wet Vegetable Spring Rolls</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="d-flex justify-content-between">
+      <a href="/index.html"
+        ><img src="/images/She Codes.png" alt="" class="logo"
+      /></a>
+      <div>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram ms-3 me-3"></i>
+        <i class="fa-brands fa-linkedin"></i>
+      </div>
+
+      <p>© 2021 SheCodes All rights reserved.</p>
+    </footer>
   </body>
 </html>
