--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
       src="https://kit.fontawesome.com/4f8499aff7.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -79,82 +85,82 @@
         </p>
       </div>
     </div>
-    <div class="main">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6">
-            <img
-              src="/images/1Wet Vegetable Spring Rolls.png"
-              class="img-fluid"
-              alt=""
-            />
-            <h2>Wet Vegetable Spring Rolls</h2>
-          </div>
-          <div class="col-sm-6">
-            <img
-              src="/images/2Wet Vegetable Spring Rolls.png"
-              class="img-fluid"
-              alt=""
-            />
-            <h2>Wet Vegetable Spring Rolls</h2>
-          </div>
+
+    <div class="container wrapper">
+      <div class="row">
+        <div class="col-sm-6">
+          <img
+            src="/images/1Wet Vegetable Spring Rolls.png"
+            class="img-fluid"
+            alt=""
+          />
+          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
         </div>
-        <div class="row">
-          <div class="col-sm-6">
-            <img
-              src="/images/3Wet Vegetable Spring Rolls.png"
-              class="img-fluid"
-              alt=""
-            />
-            <h2>Wet Vegetable Spring Rolls</h2>
-          </div>
-          <div class="col-sm-6">
-            <img
-              src="/images/4Wet Vegetable Spring Rolls.png"
-              class="img-fluid"
-              alt=""
-            />
-            <h2>Wet Vegetable Spring Rolls</h2>
-          </div>
+        <div class="col-sm-6">
+          <img
+            src="/images/2Wet Vegetable Spring Rolls.png"
+            class="img-fluid"
+            alt=""
+          />
+          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
         </div>
-        <div class="row">
-          <div class="col-sm-6">
-            <img
-              src="/images/5Wet Vegetable Spring Rolls.png"
-              class="img-fluid"
-              alt=""
-            />
-            <h2>Wet Vegetable Spring Rolls</h2>
-          </div>
-          <div class="col-sm-6">
-            <img
-              src="/images/6Wet Vegetable Spring Rolls.png"
-              class="img-fluid"
-              alt=""
-            />
-            <h2>Wet Vegetable Spring Rolls</h2>
-          </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <img
+            src="/images/3Wet Vegetable Spring Rolls.png"
+            class="img-fluid"
+            alt=""
+          />
+          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
         </div>
-        <div class="row">
-          <div class="col-sm-6">
-            <img
-              src="/images/7Wet Vegetable Spring Rolls.png"
-              class="img-fluid"
-              alt=""
-            />
-            <h2>Wet Vegetable Spring Rolls</h2>
-          </div>
-          <div class="col-sm-6">
-            <img
-              src="/images/8Wet Vegetable Spring Rolls.png"
-              class="img-fluid"
-              alt=""
-            />
-            <h2>Wet Vegetable Spring Rolls</h2>
-          </div>
+        <div class="col-sm-6">
+          <img
+            src="/images/4Wet Vegetable Spring Rolls.png"
+            class="img-fluid"
+            alt=""
+          />
+          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <img
+            src="/images/5Wet Vegetable Spring Rolls.png"
+            class="img-fluid"
+            alt=""
+          />
+          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="/images/6Wet Vegetable Spring Rolls.png"
+            class="img-fluid"
+            alt=""
+          />
+          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <img
+            src="/images/7Wet Vegetable Spring Rolls.png"
+            class="img-fluid"
+            alt=""
+          />
+          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="/images/8Wet Vegetable Spring Rolls.png"
+            class="img-fluid"
+            alt=""
+          />
+          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
         </div>
       </div>
     </div>
+
     <footer class="d-flex justify-content-between">
       <a href="/index.html"
         ><img src="/images/She Codes.png" alt="" class="logo"
