removed styles from footer

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <title>Recipe Collection</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light navbar-margin">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container navbar-margin">
         <a href="/index.html"
           ><img
             src="images/She Codes.png"
@@ -161,17 +161,23 @@
       </div>
     </div>
 
-    <footer class="d-flex justify-content-between">
-      <a href="/index.html"
-        ><img src="/images/She Codes.png" alt="" class="logo"
-      /></a>
-      <div>
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-instagram ms-3 me-3"></i>
-        <i class="fa-brands fa-linkedin"></i>
-      </div>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <a href="/index.html"
+              ><img src="/images/She Codes.png" alt="" class="logo"
+            /></a>
+          </div>
+          <div class="col-sm-4 text-center">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram p-3"></i>
+            <i class="fa-brands fa-linkedin"></i>
+          </div>
 
-      <p>© 2021 SheCodes All rights reserved.</p>
+          <p class="col-sm-4 text-end">© 2021 SheCodes All rights reserved.</p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
