--- a/index.html
+++ b/index.html
@@ -169,13 +169,15 @@
               ><img src="/images/She Codes.png" alt="" class="logo"
             /></a>
           </div>
-          <div class="col-sm-4 text-center">
+          <div class="col-sm-4 footer-icons">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-instagram p-3"></i>
             <i class="fa-brands fa-linkedin"></i>
           </div>
 
-          <p class="col-sm-4 text-end">© 2021 SheCodes All rights reserved.</p>
+          <p class="col-sm-4 footer-rights">
+            © 2021 SheCodes All rights reserved.
+          </p>
         </div>
       </div>
     </footer>
