added about me page

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link navbar-text-color" href="/about.html">About</a>
+              <a class="nav-link navbar-text-color" href="#">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link navbar-text-color" href="#">Recipe</a>
@@ -75,92 +75,51 @@
         </div>
       </div>
     </nav>
-    <div class="overlay">
-      <img src="/images/overlay.png" class="ovarlay-img" />
-      <div class="overlay-text">
-        <h1>Recipe Collection</h1>
-        <p>
-          Find a variety of inspiring recipes that are easy, delicious, and
-          healthy here
-        </p>
-      </div>
-    </div>
+    <h1 class="text-center mt-5 mb-5 title-about">About me</h1>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-lg-6 text-center">
+          <img src="/images/girl.png" class="img-fluid img-girl " alt="" />
+        </div>
+        <div class="col-lg-6 pt-4 pe-5 ">
+          <h2 class="name">Shelly White</h2>
+          <p>
+            Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa
+            sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut
+            amet diam suscipit pretium massa, sollicitudin in risus in.
+            Sagittis.
+          </p>
+          <p class="d-inline me-4">Follow me:</p>
+       
+          <a href="#" class="text-dark" ><i class="fa-brands fa-facebook"></i></a>
+          <a href="#" class="text-dark"><i class="fa-brands fa-instagram p-4"></i></a>
+          <a href="#" class="text-dark"><i class="fa-brands fa-linkedin"></i></a>
 
-    <div class="container wrapper">
-      <div class="row">
-        <div class="col-sm-6">
-          <img
-            src="/images/1Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
-        </div>
-        <div class="col-sm-6">
-          <img
-            src="/images/2Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-6">
-          <img
-            src="/images/3Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
-        </div>
-        <div class="col-sm-6">
-          <img
-            src="/images/4Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+        <div class="col-12">
+          <h3 class="text-center mb-5 mt-5 ">Favorite Recipe</h2>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <img
-            src="/images/5Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+      <div class="row mb-5">
+        <div class="col-sm-4">
+          <img src="/images/1Favorite Recipe.png" alt="" class="img-fluid" />
+           <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+           <p>Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis consectetur volutpat commodo mi suspendisse odio.</p>
         </div>
-        <div class="col-sm-6">
-          <img
-            src="/images/6Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+        <div class="col-sm-4">
+          <img src="/images/2Favorite Recipe.png" alt="" class="img-fluid" />
+           <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+           <p>Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis consectetur volutpat commodo mi suspendisse odio.</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <img
-            src="/images/7Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
-        </div>
-        <div class="col-sm-6">
-          <img
-            src="/images/8Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+        <div class="col-sm-4">
+          <img src="/images/3Favorite Recipe.png" alt="" class="img-fluid" />
+           <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+           <p>Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis consectetur volutpat commodo mi suspendisse odio.</p>
         </div>
       </div>
     </div>
-
     <footer>
       <div class="container">
         <div class="row">
@@ -170,15 +129,9 @@
             /></a>
           </div>
           <div class="col-sm-4 footer-icons">
-            <a href="#" class="text-dark"
-              ><i class="fa-brands fa-facebook"></i
-            ></a>
-            <a href="#" class="text-dark"
-              ><i class="fa-brands fa-instagram p-4"></i
-            ></a>
-            <a href="#" class="text-dark"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
+          <a href="#" class="text-dark" ><i class="fa-brands fa-facebook"></i></a>
+          <a href="#" class="text-dark"><i class="fa-brands fa-instagram p-4"></i></a>
+          <a href="#" class="text-dark"><i class="fa-brands fa-linkedin"></i></a>
           </div>
 
           <p class="col-sm-4 footer-rights">
