--- a/about.html
+++ b/about.html
@@ -63,10 +63,12 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link navbar-text-color" href="#">About</a>
+              <a class="nav-link navbar-text-color" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link navbar-text-color" href="#">Recipe</a>
+              <a class="nav-link navbar-text-color" href="/recipe.html"
+                >Recipe</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link navbar-text-color" href="#">Contact</a>
@@ -79,9 +81,9 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-lg-6 text-center">
-          <img src="/images/girl.png" class="img-fluid img-girl " alt="" />
+          <img src="/images/girl.png" class="img-fluid img-girl" alt="" />
         </div>
-        <div class="col-lg-6 pt-4 pe-5 ">
+        <div class="col-lg-6 pt-4 pe-5">
           <h2 class="name">Shelly White</h2>
           <p>
             Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa
@@ -90,33 +92,47 @@
             Sagittis.
           </p>
           <p class="d-inline me-4">Follow me:</p>
-       
-          <a href="#" class="text-dark" ><i class="fa-brands fa-facebook"></i></a>
-          <a href="#" class="text-dark"><i class="fa-brands fa-instagram p-4"></i></a>
-          <a href="#" class="text-dark"><i class="fa-brands fa-linkedin"></i></a>
 
+          <a href="#" class="text-dark"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a href="#" class="text-dark"
+            ><i class="fa-brands fa-instagram p-4"></i
+          ></a>
+          <a href="#" class="text-dark"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </div>
       </div>
       <div class="row">
         <div class="col-12">
-          <h3 class="text-center mb-5 mt-5 ">Favorite Recipe</h2>
+          <h3 class="text-center mb-5 mt-5">Favorite Recipe</h3>
         </div>
       </div>
       <div class="row mb-5">
         <div class="col-sm-4">
           <img src="/images/1Favorite Recipe.png" alt="" class="img-fluid" />
-           <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
-           <p>Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis consectetur volutpat commodo mi suspendisse odio.</p>
+          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+          <p>
+            Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis
+            consectetur volutpat commodo mi suspendisse odio.
+          </p>
         </div>
         <div class="col-sm-4">
           <img src="/images/2Favorite Recipe.png" alt="" class="img-fluid" />
-           <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
-           <p>Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis consectetur volutpat commodo mi suspendisse odio.</p>
+          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+          <p>
+            Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis
+            consectetur volutpat commodo mi suspendisse odio.
+          </p>
         </div>
         <div class="col-sm-4">
           <img src="/images/3Favorite Recipe.png" alt="" class="img-fluid" />
-           <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
-           <p>Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis consectetur volutpat commodo mi suspendisse odio.</p>
+          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+          <p>
+            Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis
+            consectetur volutpat commodo mi suspendisse odio.
+          </p>
         </div>
       </div>
     </div>
@@ -129,9 +145,15 @@
             /></a>
           </div>
           <div class="col-sm-4 footer-icons">
-          <a href="#" class="text-dark" ><i class="fa-brands fa-facebook"></i></a>
-          <a href="#" class="text-dark"><i class="fa-brands fa-instagram p-4"></i></a>
-          <a href="#" class="text-dark"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#" class="text-dark"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            <a href="#" class="text-dark"
+              ><i class="fa-brands fa-instagram p-4"></i
+            ></a>
+            <a href="#" class="text-dark"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
           </div>
 
           <p class="col-sm-4 footer-rights">
