--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
               <a class="nav-link navbar-text-color" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link navbar-text-color" href="#">Recipe</a>
+              <a class="nav-link navbar-text-color" href="/recipe.html"
+                >Recipe</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link navbar-text-color" href="#">Contact</a>
