added contact page

--- a/about.html
+++ b/about.html
@@ -71,14 +71,16 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link navbar-text-color" href="#">Contact</a>
+              <a class="nav-link navbar-text-color" href="/contact.html"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <h1 class="text-center mt-5 mb-5 title-about">About me</h1>
-    <div class="container">
+    <div class="container wrapper">
       <div class="row mb-5">
         <div class="col-lg-6 text-center">
           <img src="/images/girl.png" class="img-fluid img-girl" alt="" />
