--- a/contact.html
+++ b/contact.html
@@ -79,92 +79,31 @@
         </div>
       </div>
     </nav>
-    <div class="overlay">
-      <img src="/images/overlay.png" class="ovarlay-img" />
-      <div class="overlay-text">
-        <h1>Recipe Collection</h1>
-        <p>
-          Find a variety of inspiring recipes that are easy, delicious, and
-          healthy here
-        </p>
-      </div>
-    </div>
-
+    <h1 class="text-center mt-5 mb-5 title-recipe">Contact Us</h1>
     <div class="container wrapper">
       <div class="row">
-        <div class="col-sm-6">
-          <img
-            src="/images/1Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+        <div class="col-md-6 text-center">
+          <img src="/images/girl.png" class="img-fluid img-girl" alt="" />
         </div>
-        <div class="col-sm-6">
-          <img
-            src="/images/2Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <img
-            src="/images/3Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
-        </div>
-        <div class="col-sm-6">
-          <img
-            src="/images/4Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <img
-            src="/images/5Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
-        </div>
-        <div class="col-sm-6">
-          <img
-            src="/images/6Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <img
-            src="/images/7Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
-        </div>
-        <div class="col-sm-6">
-          <img
-            src="/images/8Wet Vegetable Spring Rolls.png"
-            class="img-fluid"
-            alt=""
-          />
-          <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
+        <div class="col-md-6 pt-5 pe-5">
+          <h4 class="contact-info mb-2">ADDRESS</h4>
+          <p>
+            <i class="fa-solid fa-location-dot me-3 mb-4"></i>021 Hollywood
+            Boulevard, Los Angeles
+          </p>
+          <h4 class="contact-info mb-2">EMAIL</h4>
+          <p>
+            <i class="fa-solid fa-envelope me-3 mb-4"></i>021 Hollywood Boulevard,
+            Los Angeles
+          </p>
+          <h4 class="contact-info mb-2">PHONE</h4>
+          <p>
+            <i class="fa-solid fa-phone me-3 "></i></i>021 Hollywood
+            Boulevard, Los Angeles
+          </p>
         </div>
       </div>
     </div>
-
     <footer>
       <div class="container">
         <div class="row">
