--- a/contact.html
+++ b/contact.html
@@ -83,9 +83,13 @@
     <div class="container wrapper">
       <div class="row">
         <div class="col-md-6 text-center">
-          <img src="/images/girl.png" class="img-fluid img-girl" alt="" />
+          <img
+            src="/images/girl.png"
+            class="img-fluid d-none d-md-block"
+            alt=""
+          />
         </div>
-        <div class="col-md-6 pt-5 pe-5">
+        <div class="col-md-6 ps-5 pt-2">
           <h4 class="contact-info mb-2">ADDRESS</h4>
           <p>
             <i class="fa-solid fa-location-dot me-3 mb-4"></i>021 Hollywood
@@ -93,13 +97,13 @@
           </p>
           <h4 class="contact-info mb-2">EMAIL</h4>
           <p>
-            <i class="fa-solid fa-envelope me-3 mb-4"></i>021 Hollywood Boulevard,
-            Los Angeles
+            <i class="fa-solid fa-envelope me-3 mb-4"></i>021 Hollywood
+            Boulevard, Los Angeles
           </p>
           <h4 class="contact-info mb-2">PHONE</h4>
           <p>
-            <i class="fa-solid fa-phone me-3 "></i></i>021 Hollywood
-            Boulevard, Los Angeles
+            <i class="fa-solid fa-phone me-3"></i>021 Hollywood Boulevard, Los
+            Angeles
           </p>
         </div>
       </div>
