--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Find inspiration for mouth-watering dishes with our collection of the best recipes. From easy meals to gourmet creations."
+    />
     <script
       src="https://kit.fontawesome.com/4f8499aff7.js"
       crossorigin="anonymous"
@@ -27,7 +31,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/styles.css" />
-    <title>Recipe Collection</title>
+    <title>About our company | recipes.com</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -37,6 +41,7 @@
             src="images/She Codes.png"
             class="navbar-brand logo"
             href="/index.html"
+            alt="logo"
         /></a>
         <button
           class="navbar-toggler"
@@ -83,7 +88,11 @@
     <div class="container wrapper">
       <div class="row mb-5">
         <div class="col-lg-6 text-center">
-          <img src="/images/girl.png" class="img-fluid img-girl" alt="" />
+          <img
+            src="/images/girl.png"
+            class="img-fluid img-girl"
+            alt="girl with blonde hair"
+          />
         </div>
         <div class="col-lg-6 pt-4 pe-5">
           <h2 class="name">Shelly White</h2>
@@ -113,7 +122,11 @@
       </div>
       <div class="row mb-5">
         <div class="col-sm-4">
-          <img src="/images/1Favorite Recipe.png" alt="" class="img-fluid" />
+          <img
+            src="/images/1Favorite Recipe.png"
+            alt="Wet Vegetable Spring Rolls"
+            class="img-fluid"
+          />
           <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
           <p>
             Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis
@@ -121,7 +134,11 @@
           </p>
         </div>
         <div class="col-sm-4">
-          <img src="/images/2Favorite Recipe.png" alt="" class="img-fluid" />
+          <img
+            src="/images/2Favorite Recipe.png"
+            alt="Wet Vegetable Spring Rolls"
+            class="img-fluid"
+          />
           <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
           <p>
             Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis
@@ -129,7 +146,11 @@
           </p>
         </div>
         <div class="col-sm-4">
-          <img src="/images/3Favorite Recipe.png" alt="" class="img-fluid" />
+          <img
+            src="/images/3Favorite Recipe.png"
+            alt="Wet Vegetable Spring Rolls"
+            class="img-fluid"
+          />
           <a href="/index.html"><h2>Wet Vegetable Spring Rolls</h2></a>
           <p>
             Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis
@@ -143,7 +164,7 @@
         <div class="row">
           <div class="col-sm-4">
             <a href="/index.html"
-              ><img src="/images/She Codes.png" alt="" class="logo"
+              ><img src="/images/She Codes.png" alt="logo" class="logo"
             /></a>
           </div>
           <div class="col-sm-4 footer-icons">
