--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore a wide range of delicious recipes that are easy to make and perfect for any occasion. From appetizers to desserts, we've got you covered!"
+    />
     <script
       src="https://kit.fontawesome.com/4f8499aff7.js"
       crossorigin="anonymous"
@@ -27,7 +31,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/styles.css" />
-    <title>Recipe Collection</title>
+    <title>Recipe Collection | recipes.com</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
