--- a/recipe.html
+++ b/recipe.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Find inspiration for mouth-watering dishes with our collection of the best recipes. From easy meals to gourmet creations."
+    />
     <script
       src="https://kit.fontawesome.com/4f8499aff7.js"
       crossorigin="anonymous"
@@ -27,7 +31,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/styles.css" />
-    <title>Recipe Collection</title>
+    <title>Best Recipe Collection for Delicious Dishes | recipes.com</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -37,6 +41,7 @@
             src="images/She Codes.png"
             class="navbar-brand logo"
             href="/index.html"
+            alt="logo"
         /></a>
         <button
           class="navbar-toggler"
@@ -86,7 +91,7 @@
       <img
         src="/images/1Wet Vegetable Spring Rolls.png"
         class="img-fluid img-recipe-collection"
-        alt=""
+        alt="Wet Vegetable Spring Rolls"
       />
 
       <h2 class="mb-5 mt-5">Wet Vegetable Spring Rolls</h2>
@@ -129,7 +134,7 @@
       <img
         src="/images/5Wet Vegetable Spring Rolls.png"
         class="img-fluid img-recipe-collection"
-        alt=""
+        alt="Wet Vegetable Spring Rolls"
       />
 
       <h2 class="mb-5 mt-5">Wet Vegetable Spring Rolls</h2>
@@ -169,7 +174,7 @@
       <img
         src="/images/3Wet Vegetable Spring Rolls.png"
         class="img-fluid img-recipe-collection"
-        alt=""
+        alt="Wet Vegetable Spring Rolls"
       />
 
       <h2 class="mb-5 mt-5">Wet Vegetable Spring Rolls</h2>
@@ -209,7 +214,7 @@
       <img
         src="/images/8Wet Vegetable Spring Rolls.png"
         class="img-fluid img-recipe-collection"
-        alt=""
+        alt="Wet Vegetable Spring Rolls"
       />
 
       <h2 class="mb-5 mt-5">Wet Vegetable Spring Rolls</h2>
