added link to contact

--- a/contact.html
+++ b/contact.html
@@ -102,13 +102,15 @@
           </p>
           <h4 class="contact-info mb-2">EMAIL</h4>
           <p>
-            <i class="fa-solid fa-envelope me-3 mb-4"></i>021 Hollywood
-            Boulevard, Los Angeles
+            <i class="fa-solid fa-envelope me-3 mb-4"></i
+            ><a href="mailto:hollywood@com.com" class="link-dark"
+              >hollywood@com.com
+            </a>
           </p>
           <h4 class="contact-info mb-2">PHONE</h4>
           <p>
-            <i class="fa-solid fa-phone me-3"></i>021 Hollywood Boulevard, Los
-            Angeles
+            <i class="fa-solid fa-phone me-3"></i
+            ><a href="tel:000000" class="link-dark">000000 </a>
           </p>
         </div>
       </div>
