--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             src="images/She Codes.png"
             class="navbar-brand logo"
             href="/index.html"
+            alt="logo"
         /></a>
         <button
           class="navbar-toggler"
@@ -63,19 +64,31 @@
                 class="nav-link home-text-color"
                 aria-current="page"
                 href="/index.html"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link navbar-text-color" href="/about.html">About</a>
+              <a
+                class="nav-link navbar-text-color"
+                href="/about.html"
+                title="About"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link navbar-text-color" href="/recipe.html"
+              <a
+                class="nav-link navbar-text-color"
+                href="/recipe.html"
+                title="Recipe"
                 >Recipe</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link navbar-text-color" href="/contact.html"
+              <a
+                class="nav-link navbar-text-color"
+                href="/contact.html"
+                title="Contact"
                 >Contact</a
               >
             </li>
@@ -195,5 +208,9 @@
         </div>
       </div>
     </footer>
+    <p class="text-center mt-2">
+      This project was coded by Justyna Krupa,
+      <a href="https://github.com/Justa91">GitHub</a>
+    </p>
   </body>
 </html>
