added target blank

--- a/about.html
+++ b/about.html
@@ -197,9 +197,9 @@
         </div>
       </div>
     </footer>
-    <p class="text-center">
+    <p class="text-center mt-2">
       This project was coded by Justyna Krupa,
-      <a href="https://github.com/Justa91">GitHub</a>
+      <a href="https://github.com/Justa91" target="_blank">GitHub</a>
     </p>
   </body>
 </html>
