--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@
     </footer>
     <p class="text-center mt-2">
       This project was coded by Justyna Krupa,
-      <a href="https://github.com/Justa91">GitHub</a>
+      <a href="https://github.com/Justa91" target="_blank">GitHub</a>
     </p>
   </body>
 </html>
